Confine whitespace prewrap to the SQL Editor's output grid to prevent it breaking subnode forms.

--- a/web/pgadmin/static/css/overrides.css
+++ b/web/pgadmin/static/css/overrides.css
@@ -528,7 +528,7 @@ fieldset[disabled] .form-control {
     background-color: #AAA;
 }
 
-.backgrid th.renderable, .backgrid td.renderable {
+.sql-editor-grid-container .backgrid th.renderable, .sql-editor-grid-container .backgrid td.renderable {
     white-space: pre-wrap;
 }
 
